--- a/index.html
+++ b/index.html
@@ -957,6 +957,7 @@
             the triumph of good over evil.
         </p>
     </div>
+    <script defer src="/_vercel/insights/script.js"></script>
     <audio id="bgMusic" loop>
         <source src="MAHALAYA.mp3" type="audio/mpeg">
         <source src="MAHALAYA.mp3" type="audio/ogg">
@@ -1457,3 +1458,4 @@
 
 
 </html>
+
