Update south kolkata pujo.html

--- a/south kolkata pujo.html
+++ b/south kolkata pujo.html
@@ -1153,6 +1153,7 @@
                 </div>
             </div>
         </div>
+    </div>
         
     <div class="container1">
         <h2>Plan Your Durga Puja Journey</h2>
@@ -1256,5 +1257,6 @@
 
 
 </body>
+
 
 </html>
