Update north kolkata pujo.html

--- a/north kolkata pujo.html
+++ b/north kolkata pujo.html
@@ -1149,7 +1149,7 @@
             <img src="nalin sarkar2.jpg" alt="Nilan Sarkar Street" />
             <div class="card-content">
                 <div class="tag">Theme-based</div>
-                <div class="card-title">Nilan Sarkar Street</div>
+                <div class="card-title">Nalin Sarkar Street</div>
                 <div class="card-desc">Nalin Sarkar Street Durga Puja in North Kolkata is known for its vibrant
                     celebrations and traditional craftsmanship. The beautifully decorated pandals and intricately
                     designed idols attract devotees and tourists alike. This festival fosters community spirit, cultural
@@ -1299,5 +1299,6 @@
     </footer>
 
 </body>
+
 
 </html>
