--- a/ranking pandals.html
+++ b/ranking pandals.html
@@ -1048,7 +1048,7 @@
                 <span class="badge runnerup">6 th</span>
                 <h3>"Santosh Mitra Square"</h3>
                 <p class="theme1">Classical Heritage</p>
-                <p class="location1">📍South Kolkata</p>
+                <p class="location1">📍North Kolkata</p>
             </div>
         </a>
         <a href="#" class="card">
@@ -1303,5 +1303,6 @@
 
 
 </body>
+
 
 </html>
