--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
     <!-- Slideshow -->
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="home.jpg" alt="Durga Puja">
+            <img src="home.jpg" alt="Durga Puja" loading="lazy">
             <div class="caption">
                 <h2>Welcome to Durga Puja 2025 🌸</h2>
                 <a href="most visit.html" class="btn">Join Puja</a>
@@ -995,7 +995,7 @@
         </div>
 
         <div class="mySlides fade">
-            <img src="home3.jpg" alt="Pandal">
+            <img src="home3.jpg" alt="Pandal" loading="lazy">
             <div class="caption">
                 <h2>Experience Tradition & Culture ✨</h2>
                 <a href="ranking pandals.html" class="btn">Explore Pandals</a>
@@ -1003,28 +1003,28 @@
         </div>
 
         <div class="mySlides fade">
-            <img src="home2.jpg" alt="Festival">
+            <img src="home2.jpg" alt="Festival" loading="lazy">
             <div class="caption">
                 <h2>Celebrate with Joy & Devotion 🎉</h2>
                 <a href="story.html" class="btn">Story About Durga Puja</a>
             </div>
         </div>
         <div class="mySlides fade">
-            <img src="gallary8.jpg" alt="Festival">
+            <img src="gallary8.jpg" alt="Festival" loading="lazy">
             <div class="caption">
                 <h2>Discover The Durga Puja Gallary 🎉</h2>
                 <a href="gallary.html" class="btn">Durga Puja Gallary</a>
             </div>
         </div>
         <div class="mySlides fade">
-            <img src="home11.jpg" alt="Festival">
+            <img src="home11.jpg" alt="Festival" loading="lazy">
             <div class="caption">
                 <h2>Discover The North Kolkata Pandals 🎉</h2>
                 <a href="north kolkata pujo.html" class="btn">North Kolkata</a>
             </div>
         </div>
         <div class="mySlides fade">
-            <img src="home12.jpg" alt="Festival">
+            <img src="home12.jpg" alt="Festival" loading="lazy"> 
             <div class="caption">
                 <h2>Discover The South Kolkata Pandals 🎉</h2>
                 <a href="south kolkata pujo.html" class="btn">South Kolkata</a>
@@ -1458,4 +1458,5 @@
 
 
 </html>
+
 
